[package]
name = "hikaru"
version = "0.1.1"
authors = ["Eli Ben-Porat <github@ben-porat.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["chess"]
description = "Download all games from Chess.com"
repository = "https://github.com/elibenporat/hikaru"
homepage = "https://github.com/elibenporat/hikaru"
readme = "README.md"
documentation = "https://docs.rs/hikaru/"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
